--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -2,26 +2,35 @@ body {
   font-family: helvetica;
   text-align: center;
 }
+
 #mainheader {
+  background-image: url("../../resources/images/the-flatiron-building.png");
+}
+.header1 {
   font-size: 70px;
   font-weight: bold;
-
+  color: white;
 }
-.headerlinks {
+.header p {
   font-size: 18px;
 }
-.about {
+#about {
   font-size: 32px;
   font-weight: bold;
 }
 
 .design {
-  background-image: url("images/the-flatiron-building.png");
+  background-image: url("../../resources/images/the-flatiron-building.png");
+  color: white;
 }
 .size {
   font-size: 23px;
 }
 .weight {
+  font-weight: bold;
+}
+.process h2 {
+  font-size: 23px;
   font-weight: bold;
 }
 .foot {
